# E19-agents-pipe

./: .gitignore  AGENTS.md  CLAUDE.md  PLAN.md  README.md  main.py  pyproject.toml
.claude/: settings.local.json
.claude/agents/agent1/: IMPLEMENTATION_SUMMARY.md  PLAN.md  README.md  __init__.py  extractor.py  gmail_connector.py  main.py  pyproject.toml  test_extractor.py  test_gmail_connector.py  verify.sh
.claude/agents/agent2/: .gitignore  IMPLEMENTATION_SUMMARY.md  PLAN.md  README.md  __init__.py  analyzer.py  excel_processor.py  extractor.py  main.py  processor.py  pyproject.toml  test_analyzer.py  test_excel_processor.py  test_processor.py
.claude/agents/agent2/.claude/agents/: excel-greeting-transformer.md
.claude/agents/agent3/: PLAN.md  README.md  __init__.py  excel_processor.py  greeting_generator.py  main.py  pyproject.toml  test_excel_processor.py  test_greeting_generator.py  test_main.py
.claude/agents/agent4/: PLAN.md  README.md  __init__.py  email_composer.py  excel_reader.py  gmail_client.py  main.py  pyproject.toml  test_email_composer.py  test_excel_reader.py  test_gmail_client.py  test_main.py
.claude/commands/: build_agent1.md  build_agent2.md  build_agent3.md  build_agent4.md
.claude/skills/: donald-trump-joke.md  eddie-murphy-joke.md
