[project]
name = "agents-pipe"
version = "0.1.0"
description = "Agent pipeline for email extraction and processing"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openpyxl>=3.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.80.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.uv.workspace]
members = [
    ".claude/agents/agent1",
    ".claude/agents/agent2",
]
